# brickbot2026

./: .gitignore  README.md  TODO.md  app.yaml  databricks.yml  pyproject.toml
agent_bricks/: SETUP.md  __init__.py  agent.py  benchmark.py  setup_knowledge_assistant.py  start_server.py
agent_server/: agent.py  start_server.py  utils.py
content/faq/: accessibility.md  faq.md  policies.md  venue-info.md
resources/jobs/: refresh_exhibitors.sql  refresh_sessions.sql  refresh_speakers.sql
scripts/: start_app.py
setup/: create_tools.sql  create_vector_search.py
